k8s-deployment/validator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator
  namespace: metanode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator
  template:
    metadata:
      labels:
        app: validator
    spec:
      containers:
      - name: validator
        image: metanode/validator:latest
        imagePullPolicy: IfNotPresent
        command: ["metanode-validator"]
        args: ["--console-mode"]
