k8s-deployment/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: metanode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
      - name: api
        image: metanode/api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: metanode
spec:
  selector:
    app: api-server
  ports:
  - name: http
    port: 8000
    targetPort: 8000
